--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.10.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-tilt": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
